--- a/graylog_in_docker/roles/graylog_in_docker/templates/rs_config.js.j2
+++ b/graylog_in_docker/roles/graylog_in_docker/templates/rs_config.js.j2
@@ -1,6 +1,7 @@
 __________________ЗАБРАТЬ ИЗ ФАЙЛА /tmp/rs_config.js__________________
 
 __________________ПОДКЛЮЧИТЬСЯ К MONGODB__________________
+docker exec -it graylog_mongo /bin/bash
 mongo --host localhost --port 27017
 
 __________________АКТИВАЦИЯ MONGODB КЛАСТЕРА__________________
